# rules_cython

./: .gitignore  BUILD  MODULE.bazel  README.md  _common.bzl  _cython_compile.bzl  _cython_compile_env.bzl  cython_library.bzl
tests/: BUILD.bazel  dummy.pxd  dummy.pyx  dummy_import.pyx  test_dummy_fn.py
